# lindbergh-loader-gui

./: .gitignore  INSTALL.md  Makefile  README.md  build-release.sh  install-dependencies.sh
.github/workflows/: build.yml  lindbergh-core.yml  lindbergh-gui.yml  release.yml
gui-qt/: CMakeLists.txt
gui-qt/src/: gamedata.h  main.cpp  mainwindow.cpp  mainwindow.h  settingsdialog.cpp  settingsdialog.h  setupdialog.cpp  setupdialog.h
lindbergh-core/: CMakeLists.txt  Dockerfile  README.md  build.sh
lindbergh-core/scripts/: install_dependencies.sh
lindbergh-core/src/libxdiff/xdiff/: xinclude.h  xversion.c
lindbergh-core/src/lindbergh/: config.c  config.h  hook.c  lindbergh.c
lindbergh-gui/: .gitignore  build-release.sh  install-dependencies.sh
lindbergh-loader/: libposixtime.so.1  lindbergh  lindbergh.conf
lindbergh-loader-gui/: LICENSE  README.md  build.sh  install-dependencies.sh  pubspec.yaml
lindbergh-loader-gui/data/: games.json
lindbergh-loader-gui/lib/: main.dart
lindbergh-loader-gui/lib/data/: core_config_repository.dart  default_games.dart  game_repository.dart  install_config.dart
lindbergh-loader-gui/lib/models/: game.dart
lindbergh-loader-gui/lib/services/: bin_processor_service.dart  file_picker_service.dart  update_service.dart
lindbergh-loader-gui/lib/utils/: game_launcher.dart
lindbergh-loader-gui/lib/widgets/: about_screen.dart  add_game_dialog.dart  bin_processor_screen.dart  console_view.dart  game_settings_dialog.dart  game_tile.dart  setup_screen.dart  sudo_password_dialog.dart  update_screen.dart  welcome_screen.dart
lindbergh-loader-gui/linux/: CMakeLists.txt
lindbergh-loader-gui/linux/runner/: my_application.cc
lindbergh-loader-gui/release/: lindbergh-loader-gui
lindbergh-loader-gui/release/data/flutter_assets/: AssetManifest.json
lindbergh-loader-gui/scripts/: build-release.sh
lindbergh-loader-gui/test/: widget_test.dart
lindbergh_games/: README.md  pubspec.yaml
lindbergh_games/.github/workflows/: build.yml
lindbergh_games/lib/: main.dart
lindbergh_games/lib/data/: core_config.dart  core_config_repository.dart  default_games.dart  game_repository.dart
lindbergh_games/lib/models/: game.dart
lindbergh_games/lib/utils/: game_launcher.dart
lindbergh_games/lib/widgets/: about_screen.dart  add_game_dialog.dart  config_editor_dialog.dart  game_settings_dialog.dart  game_tile.dart  icon_view.dart  setup_screen.dart
lindbergh_games/test/: widget_test.dart
release/data/: games.json
release/data/flutter_assets/: NOTICES.Z
scripts/release/: lindbergh_loader_gui
scripts/release/data/: games.json
scripts/release/data/flutter_assets/: version.json
